About me page yay

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,8 +45,10 @@
         </ul>
       </div>
 
+
       <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
+        <h2>Latest Projects</h2>
+        <a href="https://github.com/bpicolo/adjure/">Adjure - A Microservice for 2 Factor Auth</a>
       </div>
     </div>
 
